# sigma-moe

./: .gitignore  README.md  example.py  pyproject.toml  setup.py
sigma_moe/: __init__.py  configuration_sigma_moe.py  modeling_outputs.py  modeling_sigma_moe.py  moe_layer.py
sigma_moe/triton_src/: __init__.py  cvmm.py  router.py
tests/: bench_approx_top_k.py  test_approximate_top_k.py  test_cpu_layer.py
tests/plots/: sigma_moe_benchmark.csv
